konacna mjerenja i plot, parametri hardvera

--- a/pdf/SeminarLaTeX/BioinfoProjekt2017_Katanic_Matula.tex
+++ b/pdf/SeminarLaTeX/BioinfoProjekt2017_Katanic_Matula.tex
@@ -268,16 +268,16 @@ vrijednosti $k$ i različite sličnosti stringova.
   \textbf{Slika 1.1}  
 \end{sidewaysfigure}
 
-Kako bismo dobili što stabilnije rezultate, za svaki par stringova
-oba smo algoritma pokrenuli $30$ puta, i zatim uzeli omjer ukupnih
-vremena izvršavanja. Testiranje je izvedeno na {Kaletov procesor i
-  što već}.
+Kako bismo dobili što stabilnije rezultate, za svaki par stringova oba
+smo algoritma pokrenuli $30$ puta, i zatim uzeli omjer ukupnih vremena
+izvršavanja. Testiranje je izvedeno na Intel\textregistered  
+Core\texttrademark   i5-5200U CPU @ 2.20GHz $\times$ 4 procesoru sa 7.5
+GiB memorije na Ubuntu 16.04.
 
 U zadatku nije bilo posebnih zahtjeva što se tiče memorije, svejedno
 na primjerima na koje smo ručno otprilike provjerili naš je
 algoritam koristio manje memorije od originala (konkretno mjerili
 smo virtualnu memoriju alatom ps).
-
 
 \chapter{Zaključak}
 Vidjeli smo da se poopćenjem poznatih $LCS$ algoritama može 
